--- a/index.html
+++ b/index.html
@@ -6,11 +6,141 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Donate Today</title>
+    <link rel="shortcut icon"
+        href="https://images.squarespace-cdn.com/content/v1/621d40937ba5d44499bf9315/9a2e7a43-e938-4a51-aad9-379431bc276f/icons-donate-09.png"
+        type="image/x-icon">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+    <section>
+        <div class="cover-image">
+            <div class="cover-text">
+                <h1 id="headline">Make The World A Better Place</h1>
+                <p id="para1">Through your donation, you can make a difference. You can change the world. </p>
+                <p id="para2">Got more than needed?</p>
+                <a class="link-button" target="_blank"
+                    href="https://www.bidyanondo.org/projects/Qurbani-for-underprivileged-people">Donate
+                    Now</a>
+            </div>
 
+        </div>
+
+    </section>
+
+    <section class="donation-money">
+        <h1 class="title">Donate Money</h1>
+        <p id="donation-para">As a fellow human, we have responsibility towards other people. If you cannot do it by
+            yourself, we are here to help. Select the amount of money you want to donate or type in the amount of Taka
+            you want to donate. We will make sure it reaches to the person who needs it the most.</p>
+        <div class="amount">
+            <div>
+                <h2>100Tk</h2>
+            </div>
+            <div>
+                <h2 id="select-donation">200Tk</h2>
+            </div>
+            <div>
+                <h2>500Tk</h2>
+            </div>
+            <div>
+                <h2>1000Tk</h2>
+            </div>
+            <div>
+                <h2>5000Tk</h2>
+            </div>
+        </div>
+        <form>
+            <input type="text" class="other-amount" placeholder="Other amount (In Taka)" name="Other amount" />
+        </form>
+        <a class="link-button donate-button" target="_blank"
+            href="https://www.bidyanondo.org/projects/Qurbani-for-underprivileged-people">Donate
+            Now</a>
+    </section>
+    <section>
+        <div class="donation-plan">
+            <h1 class="title">Our Charity Programs</h1>
+            <p>With us, you can rest peacefully that your donation is going to the right places. We have several
+                programs
+                and projects to make use of your donation. The tribal people of Chittagong Hills Tracks, flood-affected
+                people of Khulna District, street childs and homeless people on the roads of Chattogram and Dhaka are
+                some
+                groups under our chaity programs.</p>
+        </div>
+        <div class="plan">
+            <div class="plan1">
+                <div id="plan1-image">
+                    <img src="icons/food.png" alt="">
+                </div>
+                <h3>Food for a family</h3>
+                <p class="plan-para">Food is our basic necessity. Without food, no human can survive long. Food gives us
+                    energy to work, to live. But there are a lot of people in the world who cannot afford to eat meals
+                    two times a day. We give them access
+                    to healthy food.</p>
+            </div>
+            <div class="plan2">
+                <div id="plan2-image">
+                    <img src="icons/shelter.png" alt="">
+                </div>
+                <h3>Shelter for a family</h3>
+                <p class="plan-para"> Thousands of people in our country live under the poverty line. Most of them has
+                    no home to live in. They usually live in the footpath of busy streets or in a slum with lots of
+                    people. We provide them a place to live in comfortably. </p>
+            </div>
+            <div class="plan3">
+                <div id="plan3-image">
+                    <img src="icons/Frame-1.png" alt="">
+                </div>
+                <h3>Education for a child</h3>
+                <p class="plan-para">It is said that education is the backbone of a nation. But hundreds of street
+                    childs in our country has no access to quality education. Because of that they cannot contribute to
+                    the society. We have evening school programs to help these children with their education.</p>
+            </div>
+        </div>
+        </div>
+    </section>
+    <section class="feature-container">
+        <div class="feature">
+            <h1>Help the people of Dinajpur </h1>
+            <p>This year, drought hit the people of Dinajpur pretty hard. The farmers could not produce necessary crops
+                to feed their needs due to the lack of water. </p>
+            <p>Their lives depend on your donation</p>
+            <a class="link-button" target="_blank" href="https://www.facebook.com/the.mishah">How to contribute?</a>
+        </div>
+        <div class="feature">
+            <img src="images/donation0.jpg" alt="">
+        </div>
+    </section>
+    <section class="feature-container">
+        <div class="feature">
+            <img src="images/donation12.png" alt="">
+        </div>
+        <div class="feature">
+            <h1>Help the flood-affected people of Sylhet</h1>
+            <p>They need us to survive. The people who are afftected by the recent flood needs our donation to survive
+                this. Your help can save a child's life, can provide food for a family are badly in need of it as they
+                have no access to clear drinking water or healthy food.</p>
+            <a class="link-button" target="_blank" href="https://www.facebook.com/the.mishah">Want to help?</a>
+        </div>
+    </section>
+    <section>
+        <div class="update">
+            <h1 class="title">Get Our Updates</h1>
+            <p>Subscribe with your email to be remained updated with our most recent charity programs and how you can
+                contribute. </p>
+        </div>
+        <form class="input-bg">
+            <input type="Email" class="email-input" placeholder="Email" name="Email" />
+            <button>Subscribe</button>
+        </form>
+    </section>
 </body>
+<footer>
+    <h1>Be The Change</h1>
+    <p>Thank you for your donation</p>
+</footer>
 
 </html>
